# qdrant-rest-cli

./: README.md  pyproject.toml
src/qdrant_rest_cli/: __init__.py  cli.py
